# rnaseeker

./: .gitignore  CHANGELOG.md  LICENSE  README.md  meta.yaml  setup.cfg
src/RNAseq/: main.py
src/RNAseq/gene_ontology/: go_filter.py
src/rnaseeker/: main.py
src/rnaseeker/fasta/: extract_promoters.py  fasta_filter.py  fasta_split.py  sra_download.py
src/rnaseeker/gene_ontology/: go_filter.py
src/rnaseeker/sequence/: sequence_io.py
src/rnaseq/: main.py
src/rnaseq/fasta/: fasta_filter.py  fasta_split.py
src/rnaseq/gene_ontology/: go_filter.py
src/rnaseq/sequence/: sequence_io.py
