[metadata]
name = RNAseq
version = attr: RNAseq.version.__version__
author = Josh Tompkin
author_email = jtompkindev@gmail.com
description = RNA-seq scripts and libraries
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jtompkin/RNAseq
license = MIT
license_file = license
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
include_package_data = True
package_dir =
    = src
packagess = find:
python_requires = >=3.7

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    gofilter= RNAseq.gene_ontology.go_filter:main
