[metadata]
name = rnaseeker
version = attr: rnaseq.version.__version__
author = Josh Tompkin
author_email = jtompkindev@gmail.com
description = RNA-seq scripts and libraries
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jtompkin/RNAseq
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
include_package_data = True
package_dir =
    = src
packagess = find:
python_requires = >=3.7

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    rnaseq = rnaseq.main:main
